--- a/style.css
+++ b/style.css
@@ -943,14 +943,12 @@ body {
 
   .card-container{
     padding-top: 10vw;
-
+    width: 100%;
+    flex-direction: column;
+    gap:1rem;
   }
 
  
-
-  .card-container {
-    width: 100%;
-  }
 
   .text-container {
     width: 100%;
@@ -980,7 +978,8 @@ body {
 
 .bgimg-card {
   color: white;
-  background-image: url(./images/forest.png);
+  background-color: #cda050;
+  /* background-image: url(./images/forest.png); */
   background-size: cover;
   background-position: center;
   -webkit-backdrop-filter: blur(5px);
@@ -1123,8 +1122,8 @@ body {
   }
 
   .text-container{
-    margin-top: 15vw;
-    margin-bottom: 15vw;
+    margin-top: 15vh;
+    margin-bottom: 15vh;
   }
   
 
