--- a/style.css
+++ b/style.css
@@ -890,18 +890,29 @@ body {
   overflow-y: hidden;
 }
 
-.globalPresenceImage img {
-  /* scale:0.7; */
-  height: 90%;
-  /* width: 100%; */
-  /* background-color: #a90000; */
-  padding: 1vw 0;
-}
 
 .globalPresenceImage {
   height: 65vh;
   /* background-color: rgb(192, 204, 27); */
-  padding-left: 16vw;
+}
+
+.gp-div-sm{
+  width: fit-content;
+  position: relative;
+}
+
+
+.button-global-presence{
+  position: absolute;
+  top: 10px;
+  left:10px;
+  background-color: black;
+  color: white;
+  font-weight: 400;
+  padding: 0.4rem 0.7rem;
+  outline: none;
+  border: none;
+  border-radius: 2rem;
 }
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
