horizontal section &navMenu responsiveness, three golden lines

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ body {
   width: clamp(80vw, 6vw, 50vw);
   /* background-color: #cda050; */
   color: #fff;
-  font-size: clamp(1rem, 6vw, 3rem);
+  font-size: clamp(1rem, 5vw, 2rem);
   text-align: center;
   display: flex;
   align-items: center;
@@ -133,11 +133,13 @@ body {
 }
 
 .splide__arrow--next {
-  margin-bottom: -5%;
+  margin-bottom: -5vw;
+  background: none !important;
 }
 
 .splide__arrow--prev {
-  margin-top: -5%;
+  margin-top: -5vw;
+  background: none !important;
 }
 /* -----------------Hero Section---------------- */
 
@@ -261,6 +263,16 @@ body {
   .videoOverlayText {
     font-size: 1.5em;
   }
+  /* Navbar responsive arrows ka patchup css :D */
+  .splide__arrow--next {
+    margin-bottom: -15%;
+    background: none !important;
+  }
+
+  .splide__arrow--prev {
+    margin-top: -15%;
+    background: none !important;
+  }
 }
 
 /* <!-- ----------------Page 1 - Video Section------------- --> */
@@ -272,6 +284,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: hidden;
 }
 
 #horizontal h2 {
@@ -279,35 +292,45 @@ body {
   font-size: clamp(2.25rem, 7vw, 3.5rem);
   font-weight: 800;
   color: #000;
-  padding-top: 5vh;
+  padding-top: 15vh;
 }
 
 .horizontal__content {
   display: flex;
   background-color: rgb(255, 255, 255);
   padding: 0 5rem;
-  height: 70vh;
+  height: 63vh;
   width: 130%;
 }
 
 .horizontal__item {
-  height: 35vh;
-  width: 35vh;
+  /* height: 35vh;
+  width: 35vh; */
+  height: max-content;
+  z-index: 50;
+  width: 20vw;
+  aspect-ratio: 1 / 1;
   position: relative;
   background: rgb(255, 255, 255);
 }
 
 .horizontal__item:not(:last-child) {
-  margin-right: 20vh;
+  /* margin-right: 20vh; */
+  margin-right: 7vw;
 }
 
 .tyre_img_hor img {
-  width: 80%;
+  /* width: 80%; */
+  width: 95%;
 }
 
 .tyre_img_hor {
-  width: 35vh;
-  height: 35vh;
+  /* width: 35vh;
+  height: 35vh; */
+  position: relative;
+  width: 100%;
+
+  height: 100%;
   border: 1px solid black;
   /* background: #000; */
   display: flex;
@@ -368,8 +391,21 @@ body {
 #main {
   position: relative;
 }
+@media screen and (min-width: 700px) and (max-width: 1100px) {
+  .horizontal__item {
+    height: max-content;
+    min-width: 25vw;
+    aspect-ratio: 1 / 1;
+    position: relative;
+    background: rgb(255, 255, 255);
+  }
 
-@media screen and (min-width: 320px) and (max-width: 768px) {  .heroSection {
+  .horizontal__item:not(:last-child) {
+    margin-right: 5vw;
+  }
+}
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .heroSection {
     height: 100vh;
     width: 100%;
     position: relative;
@@ -472,20 +508,20 @@ body {
     overflow-x: hidden;
   }
 
-  /* #horizontal h2 {
+  #horizontal h2 {
     text-align: center;
-    font-size: 3rem;
+    font-size: clamp(1.5rem, 2.25rem, 3rem);
     font-weight: 800;
     color: #000;
     padding-top: 5vh;
-  } */
+  }
 
   .horizontal__content {
     display: flex;
     background-color: rgb(255, 255, 255);
     padding: 0 5rem;
     height: 70vh;
-    width: 130%;
+    /* width: 130%; */
   }
 
   .horizontal__item {
@@ -585,7 +621,7 @@ body {
 
 .durability-header {
   color: white;
-  font-size: clamp(2.5rem, 6vw, 4.5rem);
+  font-size: clamp(2rem, 4vw, 4rem);
   padding: 0 10%;
   text-align: center;
   font-weight: 900;
@@ -593,7 +629,7 @@ body {
   align-items: center;
   justify-content: center;
   width: 100%;
-  padding-bottom: 10%;
+  padding-bottom: 5%;
   position: absolute;
   transform: translate(-50%, -50%);
   top: 30%;
@@ -609,6 +645,7 @@ body {
   transition: all 0.3s linear;
   display: flex;
   gap: 10px;
+  z-index: 50;
 }
 
 .curveimage {
@@ -628,6 +665,7 @@ body {
   overflow: hidden;
   /* background: #ffffff; */
   color: #cda050;
+  z-index: 99;
 }
 
 .hoverCurve {
@@ -681,6 +719,7 @@ body {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+  z-index: 50;
 }
 .bullStoryHeading {
   overflow: hidden;
@@ -792,12 +831,6 @@ body {
 
 /* <!-- ecosystem start --> */
 
-
-
-
-
-
-
 @media screen and (min-width: 320px) and (max-width: 768px) {
   .cursor {
     display: none;
@@ -807,8 +840,7 @@ body {
     display: none;
   }
 
-
-  .single-item{
+  .single-item {
     width: 290px;
   }
 
@@ -839,17 +871,10 @@ body {
     line-height: 1.8rem;
   }
 
-
-
-
-
-
   .bullStoryImage img {
     width: 80vw;
   }
 }
-
-
 
 /* <!-- ecosystem end --> */
 
@@ -861,6 +886,7 @@ body {
   /* background-color: rgb(198, 97, 97); */
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .globalPresenceContent {
@@ -890,22 +916,21 @@ body {
   overflow-y: hidden;
 }
 
-
 .globalPresenceImage {
   height: 65vh;
+  z-index: 99;
   /* background-color: rgb(192, 204, 27); */
 }
 
-.gp-div-sm{
+.gp-div-sm {
   width: fit-content;
   position: relative;
 }
 
-
-.button-global-presence{
+.button-global-presence {
   position: absolute;
   top: 10px;
-  left:10px;
+  left: 10px;
   background-color: black;
   color: white;
   font-weight: 400;
@@ -949,7 +974,7 @@ body {
     /* background-color: #a90000; */
     padding: 1vw 0;
   }
-  
+
   .globalPresenceImage {
     /* overflow-x: scroll; */
     height: 55vh;
@@ -962,14 +987,10 @@ body {
     overflow: hidden;
     /* background-color: #CD9C49; */
   }
-  
+
   .ecosystemContainer {
     justify-content: start;
   }
-
-  
-
-
 }
 
 /* ---------global presence------- */
@@ -983,12 +1004,15 @@ footer {
   justify-content: space-around;
   background-color: black;
   color: white;
+  z-index: 99 !important;
+  position: relative;
 }
 
 .footerTop {
   display: flex;
   justify-content: space-between;
   padding: 0 5vw;
+  z-index: 99;
 }
 
 .footerTop button {
@@ -1079,21 +1103,20 @@ footer {
 }
 /* ------------Footer----------- */
 
-
-
 /* Non JS ecosys card */
 
 .eco-section {
   background-color: black;
   color: white;
   /* background-image: url(); */
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   padding: 5%;
   height: 100vh;
   margin-top: -60vh;
   display: flex;
   flex-direction: column;
-  gap:3rem;
+  gap: 3rem;
 }
 
 .title {
@@ -1116,20 +1139,20 @@ footer {
   display: flex;
 }
 
-.card-title{
-  gap:10px;
+.card-title {
+  gap: 10px;
   align-items: center;
   font-size: 1.3rem;
   font-style: italic;
   font-weight: 500;
 }
 
-.card-eco:hover .card-title{
+.card-eco:hover .card-title {
   justify-content: space-between;
   /* transition: 1;  Have to find a way to make arrow work smoothly */
 }
 
-.card-eco:hover .card-text{
+.card-eco:hover .card-text {
   opacity: 1;
 }
 
@@ -1139,8 +1162,7 @@ footer {
   transition: 1s;
 }
 
-
-.card-arrow{
+.card-arrow {
   width: 10px;
 }
 
@@ -1156,15 +1178,13 @@ footer {
   flex: 2;
 }
 
-.card-text{
+.card-text {
   opacity: 0;
   transition: 1s;
 }
 
-
-
 .card-eco {
-  flex:1;
+  flex: 1;
   flex-direction: column;
   justify-content: space-between;
 
@@ -1176,28 +1196,27 @@ footer {
   transition: all ease 0.5s;
 
   height: 200px;
+  z-index: 99;
 }
 
-.card-eco:hover{
-  flex:2;
+.card-eco:hover {
+  flex: 2;
 }
 
 @media screen and (max-width: 768px) {
-
   .card-text-content,
   .card-container {
-      flex-direction: column;
-      gap: 3rem;
+    flex-direction: column;
+    gap: 3rem;
   }
 
   .card-container {
-      gap: 1rem;
+    gap: 1rem;
   }
 
-  .text-container h4{
+  .text-container h4 {
     font-size: 6vw;
   }
-
 
   .eco-section {
     height: 100vh;
@@ -1209,16 +1228,36 @@ footer {
     text-align: center;
   }
 
-  .title{
+  .title {
     margin-top: 4vh;
     font-size: 12vw;
     line-height: 10.5vw;
   }
 
-
   .card-title {
     font-size: 1.5rem;
   }
-  
+}
 
+/* three stupid lines styles */
+
+.three-lines-wrapper {
+  max-height: 100%;
+  /* position: absolute; */
+  /* z-index: 99; */
+}
+.three-lines {
+  display: flex;
+  position: absolute;
+  height: 70%;
+  width: 100%;
+  /* position: fixed; */
+  justify-content: space-evenly;
+  /* gap: 5%; */
+  z-index: 10;
+}
+
+.line {
+  width: 1px;
+  background-color: #cd9f505d;
 }
