--- a/style.css
+++ b/style.css
@@ -293,6 +293,7 @@ body {
   font-weight: 800;
   color: #000;
   padding-top: 15vh;
+  z-index: 13;
 }
 
 .horizontal__content {
@@ -510,10 +511,10 @@ body {
 
   #horizontal h2 {
     text-align: center;
-    font-size: clamp(1.5rem, 2.25rem, 3rem);
+    font-size: clamp(1.25rem, 1.5rem, 3rem);
     font-weight: 800;
     color: #000;
-    padding-top: 5vh;
+    padding-top: 10vh;
   }
 
   .horizontal__content {
@@ -621,7 +622,7 @@ body {
 
 .durability-header {
   color: white;
-  font-size: clamp(2rem, 4vw, 4rem);
+  font-size: clamp(1.85rem, 4vw, 4rem);
   padding: 0 10%;
   text-align: center;
   font-weight: 900;
@@ -634,6 +635,7 @@ body {
   transform: translate(-50%, -50%);
   top: 30%;
   left: 50%;
+  z-index: 99;
   /* z-index: 90; */
 }
 
@@ -730,10 +732,15 @@ body {
   font-size: clamp(4rem, 10vw, 10rem);
   text-align: center;
   font-weight: 800;
-  line-height: 20vw;
+  line-height: 10vw;
   overflow: hidden;
 }
 
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .bullStory h1 {
+    line-height: 20vw;
+  }
+}
 .bullStoryOverlay {
   height: 83vh;
   display: flex;
@@ -887,6 +894,7 @@ body {
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  z-index: 99;
 }
 
 .globalPresenceContent {
@@ -915,7 +923,16 @@ body {
   padding: 0;
   overflow-y: hidden;
 }
-
+.globalPresenceImage img {
+  /* scale:0.7; */
+  /* height: 90%; */
+  object-fit: cover;
+  object-position: center;
+  /* width: 100%; */
+  /* width: 100%; */
+  /* background-color: #a90000; */
+  padding: 1vw 0;
+}
 .globalPresenceImage {
   height: 65vh;
   z-index: 99;
@@ -1117,6 +1134,7 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 3rem;
+  z-index: 99;
 }
 
 .title {
@@ -1125,6 +1143,7 @@ footer {
   line-height: 7.5vw;
   overflow: hidden;
   margin-bottom: 5%;
+  z-index: 99;
 }
 
 .text-container h4 {
@@ -1172,6 +1191,7 @@ footer {
 
 .text-container {
   flex: 1;
+  z-index: 99;
 }
 .text-container p {
   font-size: 1.5vw;
